--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "./src/index.js",
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
-    "discord.js": "^12.2.0"
+    "discord.js": "^12.2.0",
+    "ffmpeg-static": "^4.2.4",
+    "libsodium-wrappers": "^0.7.6"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
