--- a/src/config.example.json
+++ b/src/config.example.json
@@ -1,4 +1,5 @@
 {
     "token": "<PASTE TOKEN HERE>",
-    "channel": "<PASTE CHANNEL ID HERE>"
+    "channel": "<PASTE CHANNEL ID HERE>",
+    "wwv": "<h for female hawiei v for male bolder CO>"
 }
