--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@discordjs/opus": "^0.3.2",
     "discord.js": "^12.2.0",
     "ffmpeg-static": "^4.2.4",
-    "libsodium-wrappers": "^0.7.6"
+    "libsodium-wrappers": "^0.7.6",
+    "node-schedule": "^1.3.2"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
